# quantum_hadamard_Edge_Detection

./: README.md  pyproject.toml  req.txt
notebooks/: QHED.ipynb
scripts/: qhed_2qubit.py  qhed_modern.py
